<resources>
    <string name="app_name">Instagram App</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="photo">photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comments">View all comments</string>
    <string name="add_comment">Add comment...</string>
    <string name="home">Home</string>
    <string name="new_post">New post</string>
    <string name="profile">Profile</string>
    <string name="posts">Posts</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">save</string>
</resources>