<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btnHome"
        android:enabled="true"
        android:icon="@drawable/ic_instagram_home_outline_24"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnPost"
        android:enabled="true"
        android:icon="@drawable/ic_instagram_new_post_outline_24"
        android:title="@string/new_post"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/btnProfile"
        android:enabled="true"
        android:icon="@drawable/ic_instagram_user_outline_24"
        android:title="@string/profile"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/logout"
        app:showAsAction="always">

    </item>
</menu>