<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/etUserSign"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="19dp"
        app:srcCompat="@drawable/ic_instagram_wordmark_white" />

    <EditText
        android:id="@+id/etUserSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassSign"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/pinkI"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/pinkI"
        android:textCursorDrawable="@color/pinkI" />

    <EditText
        android:id="@+id/etPassSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="@color/pinkI"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/pinkI"
        android:textCursorDrawable="@color/pinkI"
        app:layout_constraintTop_toBottomOf="@+id/etUserSign" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassSign"
        android:layout_marginStart="15dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="@color/pinkI"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/pinkI"
        android:textCursorDrawable="@color/pinkI" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/pinkI"
        android:text="@string/sign_up" />


</RelativeLayout>